--- a/Transmitter/Views/Shared/DeleteKey.cshtml
+++ b/Transmitter/Views/Shared/DeleteKey.cshtml
@@ -1,23 +1,11 @@
 ﻿@model Transmitter.Models.Key
-
+@{
+    Layout = "_Layout";
+}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Key manager</title>
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
 </head>
 <body>
     <h1>Delete key</h1>
