Add support for url parameters to Publisher

--- a/Transmitter/Views/Plugins/Microblog.cshtml
+++ b/Transmitter/Views/Plugins/Microblog.cshtml
@@ -13,7 +13,7 @@
 
     <h2>Select identity</h2>
 
-        <form method="get" action="Microblog">
+        <form method="get" action="../Microblog">
             <select name="publicKey" id="publicKey">
                 @foreach (var identity in Model.Identities)
                 {
